New templates compile

--- a/inductance_calc.yaml
+++ b/inductance_calc.yaml
@@ -1,17 +1,16 @@
-﻿
-title: Inductance Calculator
-description: Javascript Inductance calculator
-keywords: Inductance, magnetics, coil, calculator
+﻿config:
+  title: Inductance Calculator
+  description: Javascript Inductance calculator
+  keywords: Inductance, magnetics, coil, calculator
 
-resolution: 5
-
-width:
-   max: 640px
-   min: 420px
-   name: 5em
-   value: 6em
-   units: 5em
-   comment: 20em
+  width:
+    max: 640px
+    min: 420px
+    name: 5em
+    value: 6em
+    units: 5em
+    comment: 20em
+  resolution: 5
 
 
 # *******************************************************************
