--- a/rms_calculator.yaml
+++ b/rms_calculator.yaml
@@ -1,30 +1,30 @@
-﻿
-title: Average and RMS value Calculator
-description: JavaScript average and RMS value Calculator
-keywords: RMS, average, median, value, calculator
+﻿config:
+  title: Average and RMS value Calculator
+  description: JavaScript average and RMS value Calculator
+  keywords: RMS, average, median, value, calculator
 
-resolution: 5
+  resolution: 5
 
-width:
-   max: 640px
-   min: 320px
-   name: 7em
-   value: 5em
-   units: 2em
-   comment: 20em
+  width:
+    max: 640px
+    min: 320px
+    name: 7em
+    value: 5em
+    units: 2em
+    comment: 20em
 
 include:
-   - type: script 
-     name: zeros.js
-
+  - type: script 
+    name: zeros.js
+    
 
 # *******************************************************************
 
 rows:
 
-- type: img
-  name: Wave Types
-  src: images/waves.png
+- type: image
+  name: waves.png
+  comment: Wave Types
 
 - type: html
   name: Buttons for manage values
