--- a/rms_calculator.yaml
+++ b/rms_calculator.yaml
@@ -29,12 +29,14 @@ rows:
 - type: html
   name: Buttons for manage values
   code: |
+      {% raw %}
       <div class="row">Values:
       <input type="button" value="Reset" onclick="reset_var()">
       <input type="button" value="Clear" onclick="clear_var()">
       <input type="button" value="Save" onclick="save_var()">
       <input type="button" value="Load" onclick="load_var()">
       </div>
+      {% endraw %}
 
 
 # ** INPUT PARAMETER **
