--- a/rms_calculator.yaml
+++ b/rms_calculator.yaml
@@ -3,19 +3,23 @@
   description: JavaScript average and RMS value Calculator
   keywords: RMS, average, median, value, calculator
 
+  width:
+     max: 640px
+     min: 320px
+     name: 7em
+     value: 5em
+     units: 2em
+     comment: 20em
+
   resolution: 5
 
-  width:
-    max: 640px
-    min: 320px
-    name: 7em
-    value: 5em
-    units: 2em
-    comment: 20em
+
+  onload: init()
+
 
 include:
-  - type: script 
-    name: zeros.js
+  - type: script
+    name: include/cookies.js
     
 
 # *******************************************************************
