--- a/inductance_calc.yaml
+++ b/inductance_calc.yaml
@@ -13,7 +13,7 @@
 
   resolution: 5
   
-  onload: init_cookies()
+  onload: cookies_setup()
 
 include:
   - type: script
@@ -27,10 +27,10 @@ rows:
 - type: buttons
   name: Values
   buttons:
-  - { value: Reset,  onclick: reset_var() }
-  - { value: Clear,  onclick: clear_var() }
-  - { value: Save,   onclick: save_var() }
-  - { value: Load,   onclick: load_var() }
+  - { value: Reset,  onclick: var_reset() }
+  - { value: Clear,  onclick: var_clear() }
+  - { value: Save,   onclick: cookies_var_save() }
+  - { value: Load,   onclick: cookies_var_load() }
 
   
   # ** INPUT PARAMETER **
