--- a/inductance_calc.yaml
+++ b/inductance_calc.yaml
@@ -13,13 +13,6 @@
 
   resolution: 5
   
-  onload: cookies_setup()
-
-include:
-  - type: script
-    name: include/cookies.js
-
-
 # *******************************************************************
 
 rows:
@@ -27,10 +20,9 @@ rows:
 - type: buttons
   name: Values
   buttons:
-  - { value: Reset,  onclick: var_reset() }
-  - { value: Clear,  onclick: var_clear() }
-  - { value: Save,   onclick: cookies_var_save() }
-  - { value: Load,   onclick: cookies_var_load() }
+  - { value: Reset,    onclick: var_reset() }
+  - { value: Clear,    onclick: var_clear() }
+  - { value: Copy URL, onclick: query_copy() }
 
   
   # ** INPUT PARAMETER **
